Add Russian Roulette command

--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,4 +1,9 @@
 \doxysection{Классы}
 Классы с их кратким описанием.\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{classthebestchannel_1_1_the_channel_cog}{thebestchannel.\+The\+Channel\+Cog}} \\*The\+Best\+Channel\+Cog -\/ Ког с командами про канал }{\pageref{classthebestchannel_1_1_the_channel_cog}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_bot}{Laidinen-\/\+Bot.\+testbot.\+Bot}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_bot}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classgamescog_1_1_confirm}{gamescog.\+Confirm}} }{\pageref{classgamescog_1_1_confirm}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_confirm}{Laidinen-\/\+Bot.\+testbot.\+Confirm}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_confirm}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classgamescog_1_1_games_cog}{gamescog.\+Games\+Cog}} \\*Games\+Cog -\/ Ког с командами для игры }{\pageref{classgamescog_1_1_games_cog}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}{Laidinen-\/\+Bot.\+messagefrombot.\+My\+Bot}} }{\pageref{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classthechannelcog_1_1_the_channel_cog}{thechannelcog.\+The\+Channel\+Cog}} \\*The\+Best\+Channel\+Cog -\/ Ког с командами про канал }{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
 \end{DoxyCompactList}
