--- a/docs/latex/hierarchy.tex
+++ b/docs/latex/hierarchy.tex
@@ -1,9 +1,19 @@
 \doxysection{Иерархия классов}
 Иерархия классов.\begin{DoxyCompactList}
-\item commands.\+Cog\begin{DoxyCompactList}
-\item \contentsline{section}{thebestchannel.\+The\+Channel\+Cog}{\pageref{classthebestchannel_1_1_the_channel_cog}}{}
+\item commands.\+Bot\begin{DoxyCompactList}
+\item \contentsline{section}{Laidinen-\/\+Bot.testbot.\+Bot}{\pageref{class_laidinen-_bot_1_1testbot_1_1_bot}}{}
 \end{DoxyCompactList}
+\item commands.\+Cog\begin{DoxyCompactList}
+\item \contentsline{section}{gamescog.\+Games\+Cog}{\pageref{classgamescog_1_1_games_cog}}{}
+\item \contentsline{section}{thechannelcog.\+The\+Channel\+Cog}{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
+\end{DoxyCompactList}
+\item \contentsline{section}{Laidinen-\/\+Bot.messagefrombot.\+My\+Bot}{\pageref{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}}{}
 \item name\begin{DoxyCompactList}
-\item \contentsline{section}{thebestchannel.\+The\+Channel\+Cog}{\pageref{classthebestchannel_1_1_the_channel_cog}}{}
+\item \contentsline{section}{gamescog.\+Games\+Cog}{\pageref{classgamescog_1_1_games_cog}}{}
+\item \contentsline{section}{thechannelcog.\+The\+Channel\+Cog}{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
+\end{DoxyCompactList}
+\item discord.\+ui.\+View\begin{DoxyCompactList}
+\item \contentsline{section}{Laidinen-\/\+Bot.testbot.\+Confirm}{\pageref{class_laidinen-_bot_1_1testbot_1_1_confirm}}{}
+\item \contentsline{section}{gamescog.\+Confirm}{\pageref{classgamescog_1_1_confirm}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
