Изменения в коде: обновление файлов pycache, добавление класса TeammateCog, обновление функций on_ready и send_ready_gamers.

--- a/docs/latex/classgamescog_1_1_confirm.tex
+++ b/docs/latex/classgamescog_1_1_confirm.tex
@@ -12,6 +12,9 @@
 \Hypertarget{classgamescog_1_1_confirm_a98c5ad228b4ae6aee0559771cd536d3f}\label{classgamescog_1_1_confirm_a98c5ad228b4ae6aee0559771cd536d3f} 
 {\bfseries \+\_\+\+\_\+init\+\_\+\+\_\+} (self, ctx)
 \item 
+\Hypertarget{classgamescog_1_1_confirm_aaeadeb7d2cd28779ed9d1aba4d38545e}\label{classgamescog_1_1_confirm_aaeadeb7d2cd28779ed9d1aba4d38545e} 
+{\bfseries interaction\+\_\+check} (self, discord.\+Interaction interaction)
+\item 
 \Hypertarget{classgamescog_1_1_confirm_a34c394f3dac6212ee3d8c62f91d5a260}\label{classgamescog_1_1_confirm_a34c394f3dac6212ee3d8c62f91d5a260} 
 {\bfseries shoot} (self, discord.\+Interaction interaction, discord.\+ui.\+Button button)
 \begin{DoxyCompactList}\small\item\em shoot -\/ Функция для обработки нажатия кнопки "{}Спуск"{} \end{DoxyCompactList}\item 
@@ -34,10 +37,10 @@
 \begin{DoxyCompactItemize}
 \item 
 \Hypertarget{classgamescog_1_1_confirm_af9b206b818e0f3f4bbcb08498cfa653d}\label{classgamescog_1_1_confirm_af9b206b818e0f3f4bbcb08498cfa653d} 
-list {\bfseries success\+\_\+messages} = \mbox{[}"{}Сегодня тебе везёт \+:)"{}, "{}Ты выжил"{}, "{}Ты победил"{}\mbox{]}
+list {\bfseries success\+\_\+messages} = \mbox{[}"{}Сегодня тебе везёт \+:)"{}, "{}Ты выжил"{}, "{}Ты победил"{}, "{}\texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}Удача исчерпана\texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}"{}, "{}Сходи в лотерею, сегодня твой день"{}, "{}у тебя всё получится 🌹"{}\mbox{]}
 \item 
 \Hypertarget{classgamescog_1_1_confirm_a613b95d5c17ec6819df1634071bc7725}\label{classgamescog_1_1_confirm_a613b95d5c17ec6819df1634071bc7725} 
-list {\bfseries failure\+\_\+messages} = \mbox{[}"{}БУМ и ты отлетаешь!"{}, "{}\texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}YOU DIED\texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}"{}, "{}Пока-\/пока!)"{}, "{}Да ты снайпер! Точно в цель)"{}, \mbox{]}
+list {\bfseries failure\+\_\+messages} = \mbox{[}"{}БУМ и ты отлетаешь!"{}, "{}\texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}YOU DIED\texorpdfstring{$\ast$}{*}\texorpdfstring{$\ast$}{*}"{}, "{}Пока-\/пока!)"{}, "{}Да ты снайпер! Точно в цель)"{}, "{}Ну, в любви уже не повезёт"{}\mbox{]}
 \item 
 \mbox{\hyperlink{classgamescog_1_1_confirm_afe33907f8e9b1a4482efeb5a186f11d7}{success\+\_\+embed}}
 \begin{DoxyCompactList}\small\item\em Эмбеды для сообщений при осечке \end{DoxyCompactList}\item 
