--- a/docs/latex/classgamescog_1_1_games_cog.tex
+++ b/docs/latex/classgamescog_1_1_games_cog.tex
@@ -20,8 +20,8 @@ Games\+Cog -\/ Ког с командами для игры
 \Hypertarget{classgamescog_1_1_games_cog_a70173cd0f51ee889436feeee59ea86e6}\label{classgamescog_1_1_games_cog_a70173cd0f51ee889436feeee59ea86e6} 
 {\bfseries on\+\_\+ready} (self)
 \begin{DoxyCompactList}\small\item\em Событие, которое вызывается при готовности кога \end{DoxyCompactList}\item 
-\Hypertarget{classgamescog_1_1_games_cog_a78d6abf02ee29b20173b98eac46012c4}\label{classgamescog_1_1_games_cog_a78d6abf02ee29b20173b98eac46012c4} 
-{\bfseries russian\+\_\+roulette} (self, ctx)
+\Hypertarget{classgamescog_1_1_games_cog_a810a130bae186f3788b8b156487611b9}\label{classgamescog_1_1_games_cog_a810a130bae186f3788b8b156487611b9} 
+{\bfseries russian\+\_\+roulette} (self, ctx, discord.\+Member member=None)
 \begin{DoxyCompactList}\small\item\em Команда для игры в русскую рулетку \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsubsection*{Открытые атрибуты}
 \begin{DoxyCompactItemize}
