--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -5,5 +5,6 @@
 \item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_confirm}{Laidinen-\/\+Bot.\+testbot.\+Confirm}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_confirm}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classgamescog_1_1_games_cog}{gamescog.\+Games\+Cog}} \\*Games\+Cog -\/ Ког с командами для игры }{\pageref{classgamescog_1_1_games_cog}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}{Laidinen-\/\+Bot.\+messagefrombot.\+My\+Bot}} }{\pageref{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classteammatecog_1_1_teammate_cog}{teammatecog.\+Teammate\+Cog}} }{\pageref{classteammatecog_1_1_teammate_cog}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classthechannelcog_1_1_the_channel_cog}{thechannelcog.\+The\+Channel\+Cog}} \\*The\+Best\+Channel\+Cog -\/ Ког с командами про канал }{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
 \end{DoxyCompactList}
