--- a/docs/latex/hierarchy.tex
+++ b/docs/latex/hierarchy.tex
@@ -5,11 +5,13 @@
 \end{DoxyCompactList}
 \item commands.\+Cog\begin{DoxyCompactList}
 \item \contentsline{section}{gamescog.\+Games\+Cog}{\pageref{classgamescog_1_1_games_cog}}{}
+\item \contentsline{section}{teammatecog.\+Teammate\+Cog}{\pageref{classteammatecog_1_1_teammate_cog}}{}
 \item \contentsline{section}{thechannelcog.\+The\+Channel\+Cog}{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{Laidinen-\/\+Bot.messagefrombot.\+My\+Bot}{\pageref{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}}{}
 \item name\begin{DoxyCompactList}
 \item \contentsline{section}{gamescog.\+Games\+Cog}{\pageref{classgamescog_1_1_games_cog}}{}
+\item \contentsline{section}{teammatecog.\+Teammate\+Cog}{\pageref{classteammatecog_1_1_teammate_cog}}{}
 \item \contentsline{section}{thechannelcog.\+The\+Channel\+Cog}{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
 \end{DoxyCompactList}
 \item discord.\+ui.\+View\begin{DoxyCompactList}
