--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -222,6 +222,7 @@
 \input{class_laidinen-_bot_1_1testbot_1_1_confirm}
 \input{classgamescog_1_1_games_cog}
 \input{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}
+\input{classteammatecog_1_1_teammate_cog}
 \input{classthechannelcog_1_1_the_channel_cog}
 %--- End generated contents ---
 % Index
