--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,9 +1,14 @@
 \doxysection{Классы}
 Классы с их кратким описанием.\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_bot}{Laidinen-\/\+Bot.\+testbot.\+Bot}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_bot}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classadvice_cog_1_1_advice_cog}{advice\+Cog.\+Advice\+Cog}} }{\pageref{classadvice_cog_1_1_advice_cog}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classtest_1_1cls}{test.\+cls}} }{\pageref{classtest_1_1cls}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classgamescog_1_1_confirm}{gamescog.\+Confirm}} }{\pageref{classgamescog_1_1_confirm}}{}
-\item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_confirm}{Laidinen-\/\+Bot.\+testbot.\+Confirm}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_confirm}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classgamescog_1_1_games_cog}{gamescog.\+Games\+Cog}} \\*Games\+Cog -\/ Ког с командами для игры }{\pageref{classgamescog_1_1_games_cog}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classlinkscog_1_1_links_cog}{linkscog.\+Links\+Cog}} }{\pageref{classlinkscog_1_1_links_cog}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}{Laidinen-\/\+Bot.\+messagefrombot.\+My\+Bot}} }{\pageref{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}}{}
+\item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_my_client}{Laidinen-\/\+Bot.\+testbot.\+My\+Client}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_my_client}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classopinioncog_1_1_opinion}{opinioncog.\+Opinion}} }{\pageref{classopinioncog_1_1_opinion}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classteammatecog_1_1_teammate_cog}{teammatecog.\+Teammate\+Cog}} }{\pageref{classteammatecog_1_1_teammate_cog}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classthechannelcog_1_1_the_channel_cog}{thechannelcog.\+The\+Channel\+Cog}} \\*The\+Best\+Channel\+Cog -\/ Ког с командами про канал }{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classwhoisright_cog_1_1_who_is_right_cog}{whoisright\+Cog.\+Who\+Is\+Right\+Cog}} }{\pageref{classwhoisright_cog_1_1_who_is_right_cog}}{}
 \end{DoxyCompactList}
