--- a/docs/latex/hierarchy.tex
+++ b/docs/latex/hierarchy.tex
@@ -1,19 +1,29 @@
 \doxysection{Иерархия классов}
 Иерархия классов.\begin{DoxyCompactList}
-\item commands.\+Bot\begin{DoxyCompactList}
-\item \contentsline{section}{Laidinen-\/\+Bot.testbot.\+Bot}{\pageref{class_laidinen-_bot_1_1testbot_1_1_bot}}{}
+\item discord.\+Client\begin{DoxyCompactList}
+\item \contentsline{section}{Laidinen-\/\+Bot.testbot.\+My\+Client}{\pageref{class_laidinen-_bot_1_1testbot_1_1_my_client}}{}
 \end{DoxyCompactList}
+\item \contentsline{section}{test.\+cls}{\pageref{classtest_1_1cls}}{}
 \item commands.\+Cog\begin{DoxyCompactList}
+\item \contentsline{section}{advice\+Cog.\+Advice\+Cog}{\pageref{classadvice_cog_1_1_advice_cog}}{}
 \item \contentsline{section}{gamescog.\+Games\+Cog}{\pageref{classgamescog_1_1_games_cog}}{}
+\item \contentsline{section}{linkscog.\+Links\+Cog}{\pageref{classlinkscog_1_1_links_cog}}{}
+\item \contentsline{section}{opinioncog.\+Opinion}{\pageref{classopinioncog_1_1_opinion}}{}
+\item \contentsline{section}{teammatecog.\+Teammate\+Cog}{\pageref{classteammatecog_1_1_teammate_cog}}{}
 \item \contentsline{section}{thechannelcog.\+The\+Channel\+Cog}{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
+\item \contentsline{section}{whoisright\+Cog.\+Who\+Is\+Right\+Cog}{\pageref{classwhoisright_cog_1_1_who_is_right_cog}}{}
 \end{DoxyCompactList}
 \item \contentsline{section}{Laidinen-\/\+Bot.messagefrombot.\+My\+Bot}{\pageref{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}}{}
 \item name\begin{DoxyCompactList}
+\item \contentsline{section}{advice\+Cog.\+Advice\+Cog}{\pageref{classadvice_cog_1_1_advice_cog}}{}
 \item \contentsline{section}{gamescog.\+Games\+Cog}{\pageref{classgamescog_1_1_games_cog}}{}
+\item \contentsline{section}{linkscog.\+Links\+Cog}{\pageref{classlinkscog_1_1_links_cog}}{}
+\item \contentsline{section}{opinioncog.\+Opinion}{\pageref{classopinioncog_1_1_opinion}}{}
+\item \contentsline{section}{teammatecog.\+Teammate\+Cog}{\pageref{classteammatecog_1_1_teammate_cog}}{}
 \item \contentsline{section}{thechannelcog.\+The\+Channel\+Cog}{\pageref{classthechannelcog_1_1_the_channel_cog}}{}
+\item \contentsline{section}{whoisright\+Cog.\+Who\+Is\+Right\+Cog}{\pageref{classwhoisright_cog_1_1_who_is_right_cog}}{}
 \end{DoxyCompactList}
 \item discord.\+ui.\+View\begin{DoxyCompactList}
-\item \contentsline{section}{Laidinen-\/\+Bot.testbot.\+Confirm}{\pageref{class_laidinen-_bot_1_1testbot_1_1_confirm}}{}
 \item \contentsline{section}{gamescog.\+Confirm}{\pageref{classgamescog_1_1_confirm}}{}
 \end{DoxyCompactList}
 \end{DoxyCompactList}
