--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -217,12 +217,17 @@
 \chapter{Пространства имен}
 \input{namespace_laidinen}
 \chapter{Классы}
-\input{class_laidinen-_bot_1_1testbot_1_1_bot}
+\input{classadvice_cog_1_1_advice_cog}
+\input{classtest_1_1cls}
 \input{classgamescog_1_1_confirm}
-\input{class_laidinen-_bot_1_1testbot_1_1_confirm}
 \input{classgamescog_1_1_games_cog}
+\input{classlinkscog_1_1_links_cog}
 \input{class_laidinen-_bot_1_1messagefrombot_1_1_my_bot}
+\input{class_laidinen-_bot_1_1testbot_1_1_my_client}
+\input{classopinioncog_1_1_opinion}
+\input{classteammatecog_1_1_teammate_cog}
 \input{classthechannelcog_1_1_the_channel_cog}
+\input{classwhoisright_cog_1_1_who_is_right_cog}
 %--- End generated contents ---
 % Index
   \backmatter
