--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -7,7 +7,7 @@
 \item\contentsline{section}{\mbox{\hyperlink{classpokercog_1_1_buttons}{pokercog.\+Buttons}} }{\pageref{classpokercog_1_1_buttons}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classpokercog_1_1_buttons_1_1_call__button}{pokercog.\+Buttons.\+Call\+\_\+button}} }{\pageref{classpokercog_1_1_buttons_1_1_call__button}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classpokercog_1_1_buttons_1_1_check__button}{pokercog.\+Buttons.\+Check\+\_\+button}} }{\pageref{classpokercog_1_1_buttons_1_1_check__button}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classds__poker_1_1_combo}{ds\+\_\+poker.\+Combo}} }{\pageref{classds__poker_1_1_combo}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classds__poker_1_1_combo}{ds\+\_\+poker.\+Combo}} \\*Класс который реализовывает комбинации карт }{\pageref{classds__poker_1_1_combo}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classsimple__poker_1_1_combo}{simple\+\_\+poker.\+Combo}} }{\pageref{classsimple__poker_1_1_combo}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classgamescog_1_1_confirm}{gamescog.\+Confirm}} }{\pageref{classgamescog_1_1_confirm}}{}
 \item\contentsline{section}{\mbox{\hyperlink{class_laidinen-_bot_1_1testbot_1_1_confirm}{Laidinen-\/\+Bot.\+testbot.\+Confirm}} }{\pageref{class_laidinen-_bot_1_1testbot_1_1_confirm}}{}
